--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "cryptoapp",
+  "homepage": "http://localhost:3000/home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "install": "^0.13.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-moment": "^1.1.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
+    "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
