--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "cryptoapp",
-  "homepage": "http://localhost:3000/home",
+  "homepage": "https://ddderi.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "install": "^0.13.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -14,6 +16,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "save-dev": "^0.0.1-security",
     "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
