--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cryptoapp",
-  "homepage": "https://ddderi.github.io/cryptoapp",
+  "homepage": "https://ddderi.github.io/cryptoapp/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
