--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cryptoapp",
   "homepage": "https://ddderi.github.io/cryptoapp/",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
