--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.0.0",
     "install": "^0.13.0",
+    "npm-force-resolutions": "^0.0.10",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-moment": "^1.1.2",
